--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Referenciaoldal: https://mick-gordon.com/-->
 <!DOCTYPE html>
 <html lang="hu">
 <head>
@@ -12,9 +13,6 @@
         <div>
             <table>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
                     <td></td>
                     <td></td>
                 </tr>
