--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sybi_general.css">
+    <script src="sybi.js"></script>
     <title>Gkút - Főoldal</title>
 </head>
 <body>
     <header>
         <a href="/Képek/logo.jpg"></a>
-        <div>
+        <div class="topnav">
             <table>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <a href="index.html" class="topnav active">Kezdőlap</a>
+                    </td>
+                    <td>
+                        <a href="abus.html" class="topnav">Rólunk</a>
+                    </td>
+                    <td>
+                        <a href="" class="topnav">
+                            Menü
+                        </a>
+                    </td>
+                    <td class="right">
+                        <a href="index.html" class="topnav right">
+                            <img src="" alt="Logo" title="Vissza a kezdőlapra">
+                        </a>
+                    </td>
                 </tr>
             </table>
         </div>
