Témák az oldalamra
igen

--- a/mine.html
+++ b/mine.html
@@ -7,6 +7,27 @@
     <title>Gkút - Minecraft</title>
 </head>
 <body>
-    
+Kezdetek
+
+A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben vagyis 12 éve. 
+
+Játékmenet 
+
+Játékmódok
+
+Minigamek
+
+Modok
+
+Legújabb frissítések
+<!--Táblázat-->
+
+Friss hírek
+
+Könyvek
+
+Játéktörténet (elméletben)
+<!--Lejátszási lista a Game Theorists csatornáról-->
+
 </body>
 </html>
