--- a/lol.html
+++ b/lol.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sybi_general.css">
+    <script src="sybi.js"></script>
     <title>Gkút - League of Legends</title>
 </head>
+<header>
+    <div class="topnav">
+        <table>
+            <tr>
+                <td>
+                    <a href="index.html" class="topnav active">Kezdőlap</a>
+                </td>
+                <td>
+                    <a href="abus.html" class="topnav">Rólunk</a>
+                </td>
+                <td>
+                    <div class="dropdown">
+                        <button class="dropbtn">Menü <i class="bi bi-caret-down-fill"></i></button>
+                            <div class="dropdown-romane-conti">
+                                <a href="grand.html">Grand Turismo</a>
+                                <a href="lol.html">League of Legends</a>
+                                <a href="mine.html">Minecraft</a>
+                            </div>
+                    </div>
+                </td>
+                <td class="right">
+                    <a href="index.html" class="topnav right">
+                        <img src="" alt="Logo" title="Vissza a kezdőlapra">
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </div>
+</header>
 <body>
         <h1 style="font-size: 40px;text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><b>Mi is az a League of Legends?</b></h1>
     <table>
