--- a/mine.html
+++ b/mine.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sybi_general.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <script src="sybi.js"></script>
     <title>Gkút - Minecraft</title>
 </head>
