--- a/lol.html
+++ b/lol.html
@@ -47,7 +47,7 @@
                     <p> A League of Legends (rövidítve: LoL) valós idejű stratégiai játék, illetve online többjátékos csatamező, melyet a Warcraft III: The Frozen Throne videójátékhoz készült Defense of the Ancients (röviden DotA) mod ihletett. A játék fejlesztője és egyben kiadója a Riot Games; Kínában a Tencent Holdings forgalmazza.</p>
                     <p> A játék bejelentésére 2008. október 7-én került sor; a zárt bétateszt 2009. április 10-én vette kezdetét és 2009. október 22-én ért véget. Ezután a tesztelés lehetősége mindenki számára elérhetővé vált. A játék végül 2009. október 27-én jelent meg.</p>
                 </td>
-                <td> <img src="egyéb képek\league-of-legends.jpg"; style="width: 100%;"></td>
+                <td> <img src="lol képek\league-of-legends.jpg"; style="width: 100%;"></td>
             </tr>
                 </table>
             <h1 class="lolcím"><b>A játék menete</b></h1>
@@ -60,14 +60,23 @@
                 <h2 class ="lol-közép"> Az Igazság mezeje</h2>
                     <p>Jelenleg 2 állandó játékmód létezik a játékban , mely 2 különböző térképen zajlik. (játékbeli nevük Field of Justice, azaz Igazság Mezeje):</p>
                     <p><b>Idézők Szurdoka</b>: a klasszikus pálya, melyen három ösvény (top-felső, mid-középső és bot-alsó) van, ezeket a dzsungel választja el egymástól. Két 5 fős csapat küzd egymás ellen, hogy a másik csapat Nexusát lerombolják, vagy feladásra kényszerítsék őket. Ezen a térképen található Baron Nashor, a Szurdok Hírnöke, valamint a Sárkány. </p>
-                    <p class ="lol-közép"><img src="egyéb képek\fde0ba77-e4a8-445f-8bd1-22aeb9266751.jpg"; style="width: 50%;"></p>
+                    <p class ="lol-közép"><img src="lol képek\fde0ba77-e4a8-445f-8bd1-22aeb9266751.jpg"; style="width: 50%;"></p>
                     <p class ="lol-közép"> A Baron Nashor mérete egy hőshöz viszonyítva </p>
                 <h2 class="lol-közép">Ordító Szakadék:</h2>
                     <p>a 2013 április végén megjelent (Aram) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési, azaz reroll lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. Elődje a Proving Grounds pálya volt, melyen szintén hídon folytak a harcok, így szintén egy útvonallal rendelkezett, csak más kinézettel. Maradványai még mindig láthatóak a térkép „tetején”.</p>
-            <p class ="lol-közép"><img src="egyéb képek\sbIHjF7.jpg"> </p>
+            <p class ="lol-közép"><img src="lol képek\sbIHjF7.jpg"> 
             <p class ="lol-közép"> A sárkányoknak 4 fajtája van: tűzsárkány, földsárkány, vízsárkány, levegősárkány </p>
-            <p class ="lol-közép"><img src="egyéb képek\dragon-elder-1.jpg"></p>
+            <p class ="lol-közép"><img src="lol képek\dragon-elder-1.jpg"></p>
             <p class ="lol-közép">Miután az egyik csapat megszerezte a sárkánylelket, megjelenik az ősi sárkány</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-"></div>
+        <div class="col-lg-"></div>
+        <div class="col-lg-">                </div>
+    </div>
+</div>
+
             <h2 class ="lol-közép"> A hősök</h2>
             <p>Jelenleg <b> 154 hős </b> áll rendelkezésre, melyek közül a legutóbbi Vex. A hősök a játék világában olyan nagy hatalmú egyének, különbözőféle hatalmi forrásokkal, akiket/amiket az Idéző (a játékos) idéz meg és irányít. Ezek a hősök egyedi képességekkel és játékstílussal rendelkeznek, de <u>beoszthatók 6 kategóriába</u>:</p>
             <p><b> 1. Orgyilkos</b>: középszintű támadó- és védekezőképességgel rendelkeznek. Lényegük az, hogy magas prioritású, alacsony életerejű célpontokat gyorsan tudjanak megsemmisíteni. Általában van valamilyen "utazó" képességük, mellyel gyorsan tudnak helyet változtatni, akár támadás, akár menekülés céljából. Könnyen végeznek a Támogató, Mágus és Lövész karakterekkel.</p>
@@ -103,10 +112,10 @@
             <p class ="lol-közép"></p>
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="egyéb képek\letöltés2.jfif"> <figcaption>A közelharci minionok</figcaption></div>
-                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="egyéb képek\30aef4c7a7d44843b38f283fc90fe36cf50954cb-581x315.png"; width="25%"> <figcaption>A távolsági minionok</figcaption></div>
-                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="egyéb képek\images.jfif"> <figcaption>Az ostromminionok</figcaption></div>
-                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="egyéb képek\Minions_Blue&_Red_Super.jpg"; width="30%"> <figcaption>A Nexustörő minionok</figcaption></div>
+                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\letöltés2.jfif"> <figcaption>A közelharci minionok</figcaption></div>
+                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\30aef4c7a7d44843b38f283fc90fe36cf50954cb-581x315.png"> <figcaption>A távolsági minionok</figcaption></div>
+                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\images.jfif"> <figcaption>Az ostromminionok</figcaption></div>
+                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\Minions_Blue&_Red_Super.jpg"> <figcaption>A Nexustörő minionok</figcaption></div>
                     </div>
                 </div>
             <h2 class ="lol-közép">Rúnák</h2>
@@ -117,7 +126,7 @@
             <p><b>3. Ihlet</b> = kreatív eszközök és a szabályok megkerülése; másodlagos rúna: Elszántság</p>
             <p><b>4. Precizitás</b> = erősebb támadások és folyamatos sebzés; másodlagos rúna: Boszorkányság</p>
             <p><b>5. Uralom</b> = hirtelen sebzés és hozzáférés a célpontokhoz; másodlagos rúna: Precizitás</p>
-            <p class ="lol-közép"><img src="egyéb képek\runes_2018.jpg"; width="50%"></p>
+            <p class ="lol-közép"><img src="lol képek\runes_2018.jpg"; width="50%"></p>
             <p class ="lol-közép">A rúnák típusai: Precizitás, uralom, boszorkányság, elszántság és ihlet</p>
             <h2 class ="lol-közép">Intelés</h2>
             <p>Az intelés a játékban rendszeresen felbukkanó folyamat, mely során egy adott játékos szándékosan, csapatának kárt okozva direkt meghal, hogy ezáltal az ellenfél csapata előnyhöz jusson. A szó eredetileg Tyler1 amerikai streamerhez köthető, aki egy listát készített azokról a csapattársairól, akiknél ilyen viselkedést tapasztalt.</p>
@@ -126,18 +135,18 @@
             <p><b>Inhibitor</b>: meggátolja, hogy az ellenfél oldalán Szuperminionok induljanak el. Az inhibitorok nem sebeznek, bár a hősök, csak alapsebzésük 85%-át tudják kiosztani, plusz a bónusz fizikai sebzést, vagy a varázserő 40%-át, attól függ, melyik a magasabb. 4000 életponttal rendelkeznek és az elpusztítás után négy perccel újra üzemkészek. Mikor a bemondó figyelmeztet, hogy az inhibitor hamarosan visszaáll, onnantól kezdve 15 másodperc múlva felépül.</p>
             <p><b>Nexus</b>: ez indítja el a minionokat az útjukra, valamint a Nexus tartja fent a kapcsolatot az Idéző és hőse között. Tehát, amikor a Nexus elpusztul, a kapcsolat megszakad és a játék véget ér. 5500 élettel és 25 élet-regenerációval rendelkezik.</p>
             <p><b>Nexus Obeliszk</b>: az érkező medence sarkában található torony, ami célozhatatlan. A hatótávján belül (ami maga a medence) 1000 sebzést oszt ki 0,5 másodperc alatt. Ez semmilyen páncéllal, varázsellenállással vagy képességgel nem védhető.</p>
-            <p class ="lol-közép"><img src="egyéb képek\Summoner's_Rift_Outer_turret.png"></p>
+            <p class ="lol-közép"><img src="lol képek\Summoner's_Rift_Outer_turret.png"></p>
             <p class ="lol-közép">A torony felépítése</p>
-            <p class ="lol-közép"><img src="egyéb képek\5d174159002894ce8078e312e5f4a52e.jpg"; width="30%"></p>
+            <p class ="lol-közép"><img src="lol képek\5d174159002894ce8078e312e5f4a52e.jpg"; width="30%"></p>
             <p class ="lol-közép">Az inhibitor</p>
-            <p class ="lol-közép"><img src="egyéb képek\unnamed (1).jpg"; width="30%"></p>
+            <p class ="lol-közép"><img src="lol képek\unnamed (1).jpg"; width="30%"></p>
             <p class ="lol-közép">A nexus</p>
-            <p class ="lol-közép"><img src="egyéb képek\Summoners_Rift_Nexus_Obelisk.png"></p>
+            <p class ="lol-közép"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png"></p>
             <p class ="lol-közép">A nexus obeliszk</p>
             <h2 class ="lol-közép">A játék mint e-sport</h2>
             <p>A 2010-es Los Angeles-i World Cyber Games Grand Finals tartott egy League of Legends bajnokságot. Hétezer dolláros nyereményért küzdöttek a csapatok a Föld minden tájáról, a győztes a Counter Logic Gaming észak-amerikai csapat lett.</p>
             <p>Az első évad lezárásaként megrendezett bajnokságnak a Dreamhack svéd rendezvény adott otthont, 2011 júniusában. A százezer dollár összdíjazású bajnokságot az európai Fnatic csapat nyerte. A meccsek nézettsége rekordokat döntött, a legmagasabb mért érték több mint kétszázezer néző volt és összesen több mint 1.6 millió nézője volt a bajnokságnak.</p>
-            <p class ="lol-közép"><img src="egyéb képek\f04934680f8172433ca94906ef8265be_wc-lol-group.jpg"; width="40%"></p>
+            <p class ="lol-közép"><img src="lol képek\f04934680f8172433ca94906ef8265be_wc-lol-group.jpg"; width="40%"></p>
             <p class ="lol-közép">Néhány népszerű LoL e-sport csapat</p>
         </div>
 
