--- a/abus.html
+++ b/abus.html
@@ -15,10 +15,10 @@
             <table>
                 <tr>
                     <td>
-                        <a href="index.html" class="topnav active">Kezdőlap</a>
+                        <a href="index.html" class="topnav">Kezdőlap</a>
                     </td>
                     <td>
-                        <a href="abus.html" class="topnav">Rólunk</a>
+                        <a href="abus.html" class="topnav active">Rólunk</a>
                     </td>
                     <td>
                         <div class="dropdown">
