--- a/grand.html
+++ b/grand.html
@@ -14,7 +14,7 @@
         <table>
             <tr>
                 <td>
-                    <a href="index.html" class="topnav active">Kezdőlap</a>
+                    <a href="index.html" class="topnav">Kezdőlap</a>
                 </td>
                 <td>
                     <a href="abus.html" class="topnav">Rólunk</a>
@@ -23,7 +23,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Menü <i class="bi bi-caret-down-fill"></i></button>
                             <div class="dropdown-romane-conti">
-                                <a href="grand.html">Grand Turismo</a>
+                                <a class="active" href="grand.html">Grand Turismo</a>
                                 <a href="lol.html">League of Legends</a>
                                 <a href="mine.html">Minecraft</a>
                             </div>
