--- a/lol.html
+++ b/lol.html
@@ -64,27 +64,27 @@
                     <p class ="lol-közép"> A Baron Nashor mérete egy hőshöz viszonyítva </p>
                 <h2 class="lol-közép">Ordító Szakadék:</h2>
                     <p>a 2013 április végén megjelent (Aram) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési, azaz reroll lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. Elődje a Proving Grounds pálya volt, melyen szintén hídon folytak a harcok, így szintén egy útvonallal rendelkezett, csak más kinézettel. Maradványai még mindig láthatóak a térkép „tetején”.</p>
-            <p class ="lol-közép"><img src="lol képek\sbIHjF7.jpg"> 
-            <p class ="lol-közép"> A sárkányoknak 4 fajtája van: tűzsárkány, földsárkány, vízsárkány, levegősárkány </p>
-            <p class ="lol-közép"><img src="lol képek\dragon-elder-1.jpg"></p>
-            <p class ="lol-közép">Miután az egyik csapat megszerezte a sárkánylelket, megjelenik az ősi sárkány</p>
+            <p class ="lol-közép">
+            <p class ="lol-közép"> </p>
+
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-"></div>
-        <div class="col-lg-"></div>
-        <div class="col-lg-">                </div>
+        <div class="col-lg-6"><img src="lol képek\sbIHjF7.jpg"> <figcaption>A sárkányoknak 6 fajtája van: tűzsárkány, földsárkány, vízsárkány, levegősárkány, hextechsárkány és vegytechsárkány </figcaption></div>
+        <div class="col-lg-6"><img src="lol képek\dragon-elder-1.jpg"> <figcaption>Miután az egyik csapat megszerezte a sárkánylelket, megjelenik az ősi sárkány</figcaption></div>
     </div>
 </div>
 
             <h2 class ="lol-közép"> A hősök</h2>
-            <p>Jelenleg <b> 154 hős </b> áll rendelkezésre, melyek közül a legutóbbi Vex. A hősök a játék világában olyan nagy hatalmú egyének, különbözőféle hatalmi forrásokkal, akiket/amiket az Idéző (a játékos) idéz meg és irányít. Ezek a hősök egyedi képességekkel és játékstílussal rendelkeznek, de <u>beoszthatók 6 kategóriába</u>:</p>
-            <p><b> 1. Orgyilkos</b>: középszintű támadó- és védekezőképességgel rendelkeznek. Lényegük az, hogy magas prioritású, alacsony életerejű célpontokat gyorsan tudjanak megsemmisíteni. Általában van valamilyen "utazó" képességük, mellyel gyorsan tudnak helyet változtatni, akár támadás, akár menekülés céljából. Könnyen végeznek a Támogató, Mágus és Lövész karakterekkel.</p>
-            <p> <b> 2. Harcos (vagy Off-Tank)</b>: erős támadóerővel és védekezéssel rendelkeznek, viszont általában lassúak. A Harcosok alapértékei igen magasak, ezért a játék elején kulcsfontosságú a szerepük. A játék végében viszont érdemesebb, úgymond "rásegítésre" vagy védekezésre használni őket. A Harcosok bármilyen szerepet fölvehetnek.</p>
-            <p><b> 3. Mágus</b>: főleg távolsági karakterek, nagyon erős támadóerővel, de nagyon gyenge védekezéssel és alaptámadással. Céljuk, hogy távolról és területre, vagy több játékosra sebezzen. Gyakran CC-vel (crowd control effect) rendelkeznek, melyek rövid távon negatív hatással vannak az ellenfél küzdőképességére. Ezekkel irányítható a játék menete is. Érdemes velük a háttérből irányítani, mivel erejük miatt magas szintű célpontok és gyorsan megölhetők.</p>
-            <p><b> 4. Lövész</b> (vagy ADC vagy Carry): távolsági karakterek, melyeknek alaptámadása gyors és erős. Leggyakrabban rendelkeznek olyan képességekkel, amikkel saját értékeiket (támadási sebesség, mozgási sebesség stb.) erősíteni, növelni tudják. Mivel ők képesek kiosztani a legnagyobb sebzést a legrövidebb idő alatt, ezért kulcsfontosságú karakterek, mind a saját, mind az ellenfél csapat számára. A játék elején és közepén folyamatos támogatásra szorulnak, így nem érdemes egyedül menni egy Lövész karakterrel.</p>
-            <p><b> 5. Támogató</b>: gyenge támadó- és védekező képességű karakterek. Céljuk, a csapattársak támogatása, gyógyítással, buffolással, előnyös helyzetek teremtésével vagy éppen a támadási lehetőségek elkerülésével. A Támogató nem öli meg a minionokat, de megfelelő eszközzel, vagy Mesterségekkel megfelelő mennyiségű aranyat gyűjthet a fejlődéshez.</p>
-            <p><b> 6. Tank</b>: extrém védekezőképességgel és viszonylag gyenge támadással rendelkeznek és minden Tank rendelkezik valamilyen tömegirányító hatással. Lényegük, hogy megvédjék a gyengébb karaktereket, fölfogják a támadásokat, így előnyhöz juttatva saját csapatát. Nem ritka, hogy a Tank (akár a Támogató) teljesen föláldozza magát, amíg a csapattársak megölik a fontos ellenfeleket.</p>
+            <p>Jelenleg <b> 162 hős </b> áll rendelkezésre, melyek közül a legújabb: K'Sante. A hősök a játék világában olyan nagy hatalmú egyének, különbözőféle hatalmi forrásokkal, akiket/amiket az Idéző (a játékos) idéz meg és irányít. </p>
+
+            <p>Ezek a hősök egyedi képességekkel és játékstílussal rendelkeznek, de <u>beoszthatók 6 kategóriába</u>:</p>
+            <li><b> 1. Orgyilkos</b>: középszintű támadó- és védekezőképességgel rendelkeznek. Lényegük az, hogy magas prioritású, alacsony életerejű célpontokat gyorsan tudjanak megsemmisíteni. Általában van valamilyen "utazó" képességük, mellyel gyorsan tudnak helyet változtatni, akár támadás, akár menekülés céljából. Könnyen végeznek a Támogató, Mágus és Lövész karakterekkel.</p>
+            <li> <b> 2. Harcos (vagy Off-Tank)</b>: erős támadóerővel és védekezéssel rendelkeznek, viszont általában lassúak. A Harcosok alapértékei igen magasak, ezért a játék elején kulcsfontosságú a szerepük.</p>
+            <li><b> 3. Mágus</b>: főleg távolsági karakterek, nagyon erős támadóerővel, de nagyon gyenge védekezéssel és alaptámadással. Céljuk, hogy távolról és területre, vagy több játékosra sebezzen. Gyakran CC-vel (crowd control effect) rendelkeznek, melyek rövid távon negatív hatással vannak az ellenfél küzdőképességére. </p>
+            <li><b> 4. Lövész</b> (vagy ADC vagy Carry): távolsági karakterek, melyeknek alaptámadása gyors és erős. Mivel ők képesek kiosztani a legnagyobb sebzést a legrövidebb idő alatt, ezért kulcsfontosságú karakterek, mind a saját, mind az ellenfél csapat számára. A játék elején és közepén folyamatos támogatásra szorulnak, így nem érdemes egyedül menni egy Lövész karakterrel.</p>
+            <li><b> 5. Támogató</b>: gyenge támadó- és védekező képességű karakterek. Céljuk, a csapattársak támogatása, gyógyítással, buffolással, előnyös helyzetek teremtésével vagy éppen a támadási lehetőségek elkerülésével. A Támogató nem öli meg a minionokat, de megfelelő tárggyal megfelelő mennyiségű aranyat gyűjthet a fejlődéshez.</p>
+            <li><b> 6. Tank</b>: Extrém védekezőképességgel és viszonylag gyenge támadással rendelkeznek és minden Tank rendelkezik valamilyen tömegirányító hatással. Nem ritka, hogy a Tank (akár a Támogató) teljesen föláldozza magát, amíg a csapattársak megölik a fontos ellenfeleket.</p>
             <h2 class ="lol-közép"> Erőforrások</h2>
             <p>A játék jelenleg többféle erőforrást tartalmaz, valamint különféle módszereket a képességhasználat korlátozására. Egy hős maximum egy erőforrással rendelkezik.</p>
             <p><b>Mana</b>: a legáltalánosabb erőforrás, a legtöbb hős manát (mágikus energiát) használ a képességeihez. A maximális értéke és a visszatöltődés sebessége is növekszik szintlépéskor, illetve tárgyakkal vagy fogyaszthatókkal is fokozható. A játékban kék színnel jelölik.</p>
@@ -121,28 +121,39 @@
             <h2 class ="lol-közép">Rúnák</h2>
             <p>A Rúnák olyan erősítések, melyeket az Idéző azelőtt szerez be és állít össze, mielőtt hősével az Igazság Mezejére lépne. A rúnákon belül 5 fajta típust különböztetünk meg. Mindegyiken belül vannak fő rúnák, ezek közül egyet lehet választani az elsődleges rúnához. Mind az 5 rúna típusban van 3 sor sima rúna, minden sorban 3 rúna van azaz összesen 9 rúna van egy rúna típusban. Egy rúna sorból egy rúnát lehet kiválasztani (Így 4 rúna lesz az elsődleges rúna fából).Másodlagos rúna választása kor a maradék 4 rúna típus közül választhatunk. Itt nem választhatunk fő rúnát és csak 2 sorból választhatunk nem 3-ból (Így 2 rúna lesz a másodlagos rúna fából). A játék 5 rúnatípust ajánl fel, de bizonyos hősök számára más elsődleges-másodlagos rúna kombinációk lehetnek előnyösebbek, ezért a játékosok kettő saját rúna-listát is összeállíthatnak, az alapértelmezetteken kívül. Van 3 sor flex rúna is ami függ sz adott matchtől.</p>
             <h3 class ="lol-közép">Típusok (előre beállított)</h3>
-            <p><b>1. Boszorkányság</b> = felerősített képességek és erőforrás-manipuláció; másodlagos rúna: Uralom</p>
+
+            <p class ="lol-közép"></p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">           <p><b>1. Boszorkányság</b> = felerősített képességek és erőforrás-manipuláció; másodlagos rúna: Uralom</p>
             <p><b>2. Elszántság</b> = szívósság és tömegirányítás; másodlagos rúna: Boszorkányság</p>
             <p><b>3. Ihlet</b> = kreatív eszközök és a szabályok megkerülése; másodlagos rúna: Elszántság</p>
             <p><b>4. Precizitás</b> = erősebb támadások és folyamatos sebzés; másodlagos rúna: Boszorkányság</p>
-            <p><b>5. Uralom</b> = hirtelen sebzés és hozzáférés a célpontokhoz; másodlagos rúna: Precizitás</p>
-            <p class ="lol-közép"><img src="lol képek\runes_2018.jpg"; width="50%"></p>
-            <p class ="lol-közép">A rúnák típusai: Precizitás, uralom, boszorkányság, elszántság és ihlet</p>
+            <p><b>5. Uralom</b> = hirtelen sebzés és hozzáférés a célpontokhoz; másodlagos rúna: Precizitás</p></div>
+                    <div class="col-lg-8"><img src="lol képek\runes_2018.jpg"; width="50%"> <figcaption>A rúnák típusai: Precizitás, uralom, boszorkányság, elszántság és ihlet</figcaption></div>
+                </div>
+            </div>
             <h2 class ="lol-közép">Intelés</h2>
             <p>Az intelés a játékban rendszeresen felbukkanó folyamat, mely során egy adott játékos szándékosan, csapatának kárt okozva direkt meghal, hogy ezáltal az ellenfél csapata előnyhöz jusson. A szó eredetileg Tyler1 amerikai streamerhez köthető, aki egy listát készített azokról a csapattársairól, akiknél ilyen viselkedést tapasztalt.</p>
             <h2 class ="lol-közép">Épületek</h2>
-            <p><b>Torony</b>: célja a védelem, a minionhullámok lassítása. Minden lövéssel 37%-kal növekszik a sebzésük, így nem érdemes sokáig célpont maradni. Mikor elérte a maximális sebzési bónuszt (75%), +25%-kal többet sebez. A szövetséges tornyok közelében a láthatatlan ellenséges egységek láthatóvá, így támadhatóvá válnak. A külső tornyok életereje 4000 pont, a belső tornyoké 4000 pont, az inhibitor tornyok 4000 ponttal és élet-regenerálódással, a nexus tornyok 2500 ponttal és szintén élet-regenerálódással rendelkeznek.</p>
-            <p><b>Inhibitor</b>: meggátolja, hogy az ellenfél oldalán Szuperminionok induljanak el. Az inhibitorok nem sebeznek, bár a hősök, csak alapsebzésük 85%-át tudják kiosztani, plusz a bónusz fizikai sebzést, vagy a varázserő 40%-át, attól függ, melyik a magasabb. 4000 életponttal rendelkeznek és az elpusztítás után négy perccel újra üzemkészek. Mikor a bemondó figyelmeztet, hogy az inhibitor hamarosan visszaáll, onnantól kezdve 15 másodperc múlva felépül.</p>
-            <p><b>Nexus</b>: ez indítja el a minionokat az útjukra, valamint a Nexus tartja fent a kapcsolatot az Idéző és hőse között. Tehát, amikor a Nexus elpusztul, a kapcsolat megszakad és a játék véget ér. 5500 élettel és 25 élet-regenerációval rendelkezik.</p>
-            <p><b>Nexus Obeliszk</b>: az érkező medence sarkában található torony, ami célozhatatlan. A hatótávján belül (ami maga a medence) 1000 sebzést oszt ki 0,5 másodperc alatt. Ez semmilyen páncéllal, varázsellenállással vagy képességgel nem védhető.</p>
-            <p class ="lol-közép"><img src="lol képek\Summoner's_Rift_Outer_turret.png"></p>
-            <p class ="lol-közép">A torony felépítése</p>
-            <p class ="lol-közép"><img src="lol képek\5d174159002894ce8078e312e5f4a52e.jpg"; width="30%"></p>
-            <p class ="lol-közép">Az inhibitor</p>
-            <p class ="lol-közép"><img src="lol képek\unnamed (1).jpg"; width="30%"></p>
-            <p class ="lol-közép">A nexus</p>
-            <p class ="lol-közép"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png"></p>
-            <p class ="lol-közép">A nexus obeliszk</p>
+            <p>
+            
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6"><b>Torony</b>: célja a védelem, a minionhullámok lassítása. Minden lövéssel 37%-kal növekszik a sebzésük, így nem érdemes sokáig célpont maradni. Mikor elérte a maximális sebzési bónuszt (75%), +25%-kal többet sebez. A szövetséges tornyok közelében a láthatatlan ellenséges egységek láthatóvá, így támadhatóvá válnak. A külső tornyok életereje 4000 pont, a belső tornyoké 4000 pont, az inhibitor tornyok 4000 ponttal és élet-regenerálódással, a nexus tornyok 2500 ponttal és szintén élet-regenerálódással rendelkeznek.</p></div>
+                    <div class="col-lg-6"><img src="lol képek\Summoner's_Rift_Outer_turret.png">
+            <figcaption>A torony felépítése</figcaption></div>
+                    <div class="col-lg-6"><p><b>Inhibitor</b>: meggátolja, hogy az ellenfél oldalán Szuperminionok induljanak el. Az inhibitorok nem sebeznek, bár a hősök, csak alapsebzésük 85%-át tudják kiosztani, plusz a bónusz fizikai sebzést, vagy a varázserő 40%-át, attól függ, melyik a magasabb. 4000 életponttal rendelkeznek és az elpusztítás után négy perccel újra üzemkészek. Mikor a bemondó figyelmeztet, hogy az inhibitor hamarosan visszaáll, onnantól kezdve 15 másodperc múlva felépül.</p></div>
+                    <div class="col-lg-6"><img src="lol képek\5d174159002894ce8078e312e5f4a52e.jpg"; width="30%">
+            <figcaption>Az inhibitor</figcaption></div>
+                    <div class="col-lg-6"><p><b>Nexus</b>: ez indítja el a minionokat az útjukra, valamint a Nexus tartja fent a kapcsolatot az Idéző és hőse között. Tehát, amikor a Nexus elpusztul, a kapcsolat megszakad és a játék véget ér. 5500 élettel és 25 élet-regenerációval rendelkezik.</p></div>
+                    <div class="col-lg-6"><img src="lol képek\unnamed (1).jpg"; width="30%">
+            <figcaption>A nexus</figcaption></div>
+                    <div class="col-lg-6"><p><b>Nexus Obeliszk</b>: az érkező medence sarkában található torony, ami célozhatatlan. A hatótávján belül (ami maga a medence) 1000 sebzést oszt ki 0,5 másodperc alatt. Ez semmilyen páncéllal, varázsellenállással vagy képességgel nem védhető.</p></div>
+                    <div class="col-lg-6"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png">
+            <figcaption>A nexus obeliszk<figcaption></div>
+                </div>
+            </div>
             <h2 class ="lol-közép">A játék mint e-sport</h2>
             <p>A 2010-es Los Angeles-i World Cyber Games Grand Finals tartott egy League of Legends bajnokságot. Hétezer dolláros nyereményért küzdöttek a csapatok a Föld minden tájáról, a győztes a Counter Logic Gaming észak-amerikai csapat lett.</p>
             <p>Az első évad lezárásaként megrendezett bajnokságnak a Dreamhack svéd rendezvény adott otthont, 2011 júniusában. A százezer dollár összdíjazású bajnokságot az európai Fnatic csapat nyerte. A meccsek nézettsége rekordokat döntött, a legmagasabb mért érték több mint kétszázezer néző volt és összesen több mint 1.6 millió nézője volt a bajnokságnak.</p>
