--- a/lol.html
+++ b/lol.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sybi_general.css">
     <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="lol.css">
     <script src="sybi.js"></script>
     <title>Gkút - League of Legends</title>
 </head>
@@ -51,20 +52,20 @@
             </tr>
                 </table>
             <h1 class="lolcím"><b>A játék menete</b></h1>
+            <hr style="text-align: center"><br>
             <h3 class ="lol-közép"> Általános tudnivalók</h3>
             <table>
                 <tr>
                 <td>
                     <p> A játékos regisztráció után az úgynevezett láthatatlan "Idéző" szerepébe bújik, aki egy egyedülálló mágikus képességekkel rendelkező hőst tud irányítani akinek célja, hogy csapattársai segítségével legyőzze az ellenfél csapatot. A három különböző pályán a játékosok két egyenlő, 3 illetve 5 fős csapatokra oszlanak, mindenki egy általa vagy véletlenszerűen választott hőst irányítva. A csapatok a térkép két átellenes pontján kezdenek egy Érkező Medence (Spawn Pool) nevű helyen, a Nexus (főközpont, szó szerint: összeköttetés) mellett. Az ellenfél Nexusának elpusztításával lehet megnyerni a játékot, vagy ha az ellenfél csapata feladja.</p>
-                    <p> A hősök a játék során folyamatosan tapasztalatot és aranyat gyűjtenek, ellenséges lények (hősök és minionok) illetve semleges szörnyetegek legyilkolásával, valamint tornyok és inhibitorok lerombolásával. Az aranyból különféle tárgyakat vehetnek, amelyek fokozzák a hatékonyságukat, képességeik erejét, vagy éppen védelmet adnak. Első szinten kezdenek és a 18. szintig fejlődhetnek minden játék alkalmával, míg az Idézői szint, folyamatosan növekszik.</p>
+                    <p> A hősök a játék során folyamatosan tapasztalatot és aranyat gyűjtenek, ellenséges lények (hősök és minionok) illetve semleges szörnyek legyilkolásával, valamint tornyok és inhibitorok lerombolásával. Az aranyból különféle tárgyakat vehetnek, amelyek fokozzák a hatékonyságukat, képességeik erejét, vagy védelmet adnak. Első szinten kezdenek és a 18. szintig fejlődhetnek minden játék alkalmával, míg az Idézői szint, folyamatosan növekszik.</p>
                 <h2 class ="lol-közép"> Az Igazság mezeje</h2>
                     <p>Jelenleg 2 állandó játékmód létezik a játékban , mely 2 különböző térképen zajlik. (játékbeli nevük Field of Justice, azaz Igazság Mezeje):</p>
                     <p><b>Idézők Szurdoka</b>: a klasszikus pálya, melyen három ösvény (top-felső, mid-középső és bot-alsó) van, ezeket a dzsungel választja el egymástól. Két 5 fős csapat küzd egymás ellen, hogy a másik csapat Nexusát lerombolják, vagy feladásra kényszerítsék őket. Ezen a térképen található Baron Nashor, a Szurdok Hírnöke, valamint a Sárkány. </p>
                     <p class ="lol-közép"><img src="lol képek\fde0ba77-e4a8-445f-8bd1-22aeb9266751.jpg"; style="width: 50%;"></p>
                     <p class ="lol-közép"> A Baron Nashor mérete egy hőshöz viszonyítva </p>
                 <h2 class="lol-közép">Ordító Szakadék:</h2>
-                    <p>a 2013 április végén megjelent (Aram) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési, azaz reroll lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. Elődje a Proving Grounds pálya volt, melyen szintén hídon folytak a harcok, így szintén egy útvonallal rendelkezett, csak más kinézettel. Maradványai még mindig láthatóak a térkép „tetején”.</p>
-            <p class ="lol-közép">
+                    <p>a 2013 április végén megjelent (Aram) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. </p>
             <p class ="lol-közép"> </p>
 
 
@@ -79,37 +80,38 @@
             <p>Jelenleg <b> 162 hős </b> áll rendelkezésre, melyek közül a legújabb: K'Sante. A hősök a játék világában olyan nagy hatalmú egyének, különbözőféle hatalmi forrásokkal, akiket/amiket az Idéző (a játékos) idéz meg és irányít. </p>
 
             <p>Ezek a hősök egyedi képességekkel és játékstílussal rendelkeznek, de <u>beoszthatók 6 kategóriába</u>:</p>
-            <li><b> 1. Orgyilkos</b>: középszintű támadó- és védekezőképességgel rendelkeznek. Lényegük az, hogy magas prioritású, alacsony életerejű célpontokat gyorsan tudjanak megsemmisíteni. Általában van valamilyen "utazó" képességük, mellyel gyorsan tudnak helyet változtatni, akár támadás, akár menekülés céljából. Könnyen végeznek a Támogató, Mágus és Lövész karakterekkel.</p>
-            <li> <b> 2. Harcos (vagy Off-Tank)</b>: erős támadóerővel és védekezéssel rendelkeznek, viszont általában lassúak. A Harcosok alapértékei igen magasak, ezért a játék elején kulcsfontosságú a szerepük.</p>
-            <li><b> 3. Mágus</b>: főleg távolsági karakterek, nagyon erős támadóerővel, de nagyon gyenge védekezéssel és alaptámadással. Céljuk, hogy távolról és területre, vagy több játékosra sebezzen. Gyakran CC-vel (crowd control effect) rendelkeznek, melyek rövid távon negatív hatással vannak az ellenfél küzdőképességére. </p>
-            <li><b> 4. Lövész</b> (vagy ADC vagy Carry): távolsági karakterek, melyeknek alaptámadása gyors és erős. Mivel ők képesek kiosztani a legnagyobb sebzést a legrövidebb idő alatt, ezért kulcsfontosságú karakterek, mind a saját, mind az ellenfél csapat számára. A játék elején és közepén folyamatos támogatásra szorulnak, így nem érdemes egyedül menni egy Lövész karakterrel.</p>
-            <li><b> 5. Támogató</b>: gyenge támadó- és védekező képességű karakterek. Céljuk, a csapattársak támogatása, gyógyítással, buffolással, előnyös helyzetek teremtésével vagy éppen a támadási lehetőségek elkerülésével. A Támogató nem öli meg a minionokat, de megfelelő tárggyal megfelelő mennyiségű aranyat gyűjthet a fejlődéshez.</p>
-            <li><b> 6. Tank</b>: Extrém védekezőképességgel és viszonylag gyenge támadással rendelkeznek és minden Tank rendelkezik valamilyen tömegirányító hatással. Nem ritka, hogy a Tank (akár a Támogató) teljesen föláldozza magát, amíg a csapattársak megölik a fontos ellenfeleket.</p>
+            <ol>
+            <li><b> Orgyilkos</b>: középszintű támadó- és védekezőképességgel rendelkeznek. Lényegük az, hogy magas prioritású, alacsony életerejű célpontokat gyorsan tudjanak megsemmisíteni. Általában van valamilyen "utazó" képességük, mellyel gyorsan tudnak helyet változtatni, akár támadás, akár menekülés céljából. Könnyen végeznek a Támogató, Mágus és Lövész karakterekkel.</p>
+            <li><b> Harcos (vagy Off-Tank)</b>: erős támadóerővel és védekezéssel rendelkeznek, viszont általában lassúak. A Harcosok alapértékei igen magasak, ezért a játék elején kulcsfontosságú a szerepük.</p>
+            <li><b> Mágus</b>: főleg távolsági karakterek, nagyon erős támadóerővel, de nagyon gyenge védekezéssel és alaptámadással. Céljuk, hogy távolról és területre, vagy több játékosra sebezzen. Gyakran CC-vel (crowd control effect) rendelkeznek, melyek rövid távon negatív hatással vannak az ellenfél küzdőképességére. </p>
+            <li><b> Lövész</b> (vagy ADC vagy Carry): távolsági karakterek, melyeknek alaptámadása gyors és erős. Mivel ők képesek kiosztani a legnagyobb sebzést a legrövidebb idő alatt, ezért kulcsfontosságú karakterek, mind a saját, mind az ellenfél csapat számára. A játék elején és közepén folyamatos támogatásra szorulnak, így nem érdemes egyedül menni egy Lövész karakterrel.</p>
+            <li><b> Támogató</b>: gyenge támadó- és védekező képességű karakterek. Céljuk, a csapattársak támogatása, gyógyítással, buffolással, előnyös helyzetek teremtésével vagy éppen a támadási lehetőségek elkerülésével. A Támogató nem öli meg a minionokat, de megfelelő tárggyal megfelelő mennyiségű aranyat gyűjthet a fejlődéshez.</p>
+            <li><b> Tank</b>: Extrém védekezőképességgel és viszonylag gyenge támadással rendelkeznek és minden Tank rendelkezik valamilyen tömegirányító hatással. Nem ritka, hogy a Tank (akár a Támogató) teljesen föláldozza magát, amíg a csapattársak megölik a fontos ellenfeleket.</p></ol>
+
+
             <h2 class ="lol-közép"> Erőforrások</h2>
-            <p>A játék jelenleg többféle erőforrást tartalmaz, valamint különféle módszereket a képességhasználat korlátozására. Egy hős maximum egy erőforrással rendelkezik.</p>
-            <p><b>Mana</b>: a legáltalánosabb erőforrás, a legtöbb hős manát (mágikus energiát) használ a képességeihez. A maximális értéke és a visszatöltődés sebessége is növekszik szintlépéskor, illetve tárgyakkal vagy fogyaszthatókkal is fokozható. A játékban kék színnel jelölik.</p>
-            <p><b>Energia</b>: négy nindzsa (Akali, Kennen, Shen, Zed) és egy szerzetes által (Lee Sin) használt erőforrás. Jellemzője, hogy a maximális alapértéke rögzített (200), valamint a visszatöltődés sebessége is kevésbé befolyásolható, viszont alapvetően gyors. Ez azt eredményezi, hogy az erőforrás a manával ellentétben hosszú távon nem fogy el, viszont rövidtávon a képességek túlzott használatával könnyen kimerülhet.És amiért újradolgoztak pár rúnát ezért a maximum energia 250-re lehet húzni.</p>
-            <p><b>Düh/Vadság</b>: ez az erőforrás nulláról indul, nagyrészt alaptámadásokkal növekszik, és a képességek használatát erősíti, és röviddel a harc befejezése után folyamatosan fogy. Maximum értéke 100, illetve 5. Jelenleg 5 hős, Tryndamere, Renekton, Shyvana, Gnar és Rek'Sai használja a Dühöt képességeik erősítésére, míg Rengar a Vadságot használja fel erőforrásként. A Düh piros, a Vadság narancssárga színnel van jelölve.</p>
-            <p><b>Hő</b>: jelenleg egy hős használja, (Rumble) a mechanikus gépezetének a túlmelegedését mérve ezzel. Minden képességhasználattal növekszik, bizonyos határ felett erősíti a képességeit, valamint ha eléri a maximumot akkor a túlmelegedett gép kihűlésig nem tud több képességet használni. Képességhasználat nélkül folyamatosan hűl a gép, fogyasztva az erőforrást.</p>
-            <p><b>Bátorság</b>: egy hős használja, mégpedig Kled. Ha Kled gyíkja, Skaarl elfut, bátorsággal lehet visszahívni, melyet ellenséges hősök sebzésével, vagy minionok megölésével lehet szerezni. Ha a bátorságcsík eléri a maximumot, Skaarl visszajön.</p>
-            <p><b>Élet</b>: öt karakter a saját életerejéből veszít, amikor bizonyos képességeket használ. Ezeknél a karaktereknél az élet visszatöltése megoldott, így általában nem áll fent az a veszély, hogy "túlhasználja" a képességeit az adott karakter (Pl.: Zac).</p>
-            <p><b>Semmi</b>: vannak olyan karakterek is, amelyeket csupán a töltési idő korlátoz képességeik használatában. Illetve vannak hősök akik ezt az erőforrást a passzív képességükkel felhasználják (Pl.: Yasuo).</p>
+            <h5>A játék jelenleg többféle erőforrást tartalmaz, valamint különféle módszereket a képességhasználat korlátozására. Egy hős maximum egy erőforrással rendelkezik.</h5>
+            <li><b>Mana</b>: a legáltalánosabb erőforrás, a legtöbb hős manát (mágikus energiát) használ a képességeihez. A maximális értéke és a visszatöltődés sebessége is növekszik szintlépéskor, illetve tárgyakkal vagy fogyaszthatókkal is fokozható. A játékban kék színnel jelölik.</p>
+            <li><b>Energia</b>: Öt hős által (Akali, Kennen, Shen, Zed és Lee Sin) használt erőforrás. Jellemzője, hogy a maximális alapértéke rögzített (200), valamint a visszatöltődés sebessége is kevésbé befolyásolható, viszont alapvetően gyors. Ez azt eredményezi, hogy az erőforrás a manával ellentétben hosszú távon nem fogy el, viszont rövidtávon a képességek túlzott használatával könnyen kimerülhet.</p>
+            <li><b>Düh/Vadság</b>: ez az erőforrás nulláról indul, nagyrészt alaptámadásokkal növekszik, és a képességek használatát erősíti, és röviddel a harc befejezése után folyamatosan fogy. Maximum értéke 100, illetve 5. Jelenleg 5 hős, Tryndamere, Renekton, Shyvana, Gnar és Rek'Sai használja a Dühöt képességeik erősítésére, míg Rengar a Vadságot használja fel erőforrásként. A Düh piros, a Vadság narancssárga színnel van jelölve.</p>
+            <li><b>Hő</b>: jelenleg egy hős használja, (Rumble) a mechanikus gépezetének a túlmelegedését mérve ezzel. Minden képességhasználattal növekszik, bizonyos határ felett erősíti a képességeit, valamint ha eléri a maximumot akkor a túlmelegedett gép kihűlésig nem tud több képességet használni. Képességhasználat nélkül folyamatosan hűl a gép, fogyasztva az erőforrást.</p>
+            <li><b>Bátorság</b>: egy hős használja, mégpedig Kled. Ha Kled gyíkja, Skaarl elfut, bátorsággal lehet visszahívni, melyet ellenséges hősök sebzésével, vagy minionok megölésével lehet szerezni. Ha a bátorságcsík eléri a maximumot, Skaarl visszajön.</p>
+            <li><b>Élet</b>: öt karakter a saját életerejéből veszít, amikor bizonyos képességeket használ. Ezeknél a karaktereknél az élet visszatöltése megoldott, így általában nem áll fent az a veszély, hogy "túlhasználja" a képességeit az adott karakter (Pl.: Zac).</p>
+            <li><b>Semmi</b>: vannak olyan karakterek is, amelyeket csupán a töltési idő korlátoz képességeik használatában (Pl.: Riven).  Illetve vannak hősök akik ezt az erőforrást a passzív képességükkel felhasználják (Pl.: Yasuo).</p>
+
+
             <h2 class ="lol-közép"> Eszközök</h2>
-            <p>Ezek olyan tárgyak, melyek nagyban módosítják az adott karakter állapotát és növelik teljesítményét (két kivétel ez alól a Vadászpenge (Hunter's Machete) és a Lélekkő (Spirit Stone) melyek nem adnak hozzá a karakter statisztikájához).
+            <h5>Ezek olyan tárgyak, melyek nagyban módosítják az adott karakter erejét.</h5>
             <p> Jelenleg 6+1 tárgyat hordhat magával minden hős, így ezek összeválogatása kulcsfontosságú a játékmenet tekintetében. Ezeket kizárólag a boltban lehet megvenni, a Kezdő Medencétől nem messze. Ez alól kivétel az Ordító Szakadék, mivel itt csak bizonyos feltételek mellett lehet vásárolni. A boltban az eszközöket el is lehet adni, amiért a teljes ár 70%-át kapjuk vissza. Kivételt képeznek a Kutató- és Doran tárgyak, azok, amiknek arany bevételük van, a fogyaszthatók és az Őrangyal (Guardian Angel), melyek után az értékük 40%-a jár vissza.</p>
             <p> Azok a tárgyak, amik egyedi passzív képességekkel rendelkeznek, nem halmozhatók más, azonos nevű passzív képességekkel. A tárgyak csoportokra oszthatók használatuk szerint: támadó, védekező, varázserőt növelő, talizmánok, illetve egyéb tárgyak, mely csoportba a fogyaszthatók is beletartoznak.</p>
-            <p>Vannak olyan tárgyak is, amik kizárólag közelharci (Vérszomjas hidra (Ravenous Hydra), Húsevő (Flesheater)), vagy távolsági (Runaan hurrikánja (Runaan's Hurricane)) bajnokok számára használható, ezen felül olyanok is vannak, melyek kizárólag bizonyos bajnokok által használhatók (Kalista - Fekete lándzsa (The Black Spear), Viktor - A Hex agy (The Hex Core)).</p>
-            <p>Külön említést érdemelnek a támogatók számára készített tárgyak, amiknek egyedi képességeik segítségével a csapattársakat támogathatják, akár pajzsolással (A hegy arca (Face of the Mountain)), akár saját maguk erősítésével, pl. plusz arany bevétellel (A felemelkedés talizmánja (Talisman of Ascension)) vagy éppen mindkettővel (pl. a pajzs pusztításával a támogató kap aranyat - Bizalomgömb (Globe of Trust)).</p>
+            <p>Vannak olyan tárgyak is, amit csak távolsági bajnokok számára használható  (Runaan hurrikánja), ezen felül olyanok is vannak, melyek kizárólag bizonyos bajnokok által használhatók (Kalista - Fekete lándzsa (The Black Spear), Viktor - A Hex agy (The Hex Core)).</p>
+
             <h2 class ="lol-közép"> Minionok</h2>
             <p>A minionok feláldozható lények, amik automatikusan generálódnak a Nexusban, azzal a céllal, hogy az előre kiválasztott ösvényen haladva folyamatosan törjenek előre. Az első hullám a játék kezdete után másfél perccel indul, mind a kék, mind a piros csapat oldaláról, ezután 30 másodpercenként új hullámban jönnek és 3 percenként minden új minion erősödik. A tornyok felé 50%-kal többet, míg a hősök felé 15%-kal kevesebbet sebeznek. Fontos, hogy a minionok nem összetévesztendők a dzsungelben lévő semleges szörnyekkel. A minionok 'lelketlen háborús gépezetek' így nem éreznek, nem gondolkodnak. Mégis, csak bizonyos esetekben fognak támadni. Jelenleg négy fajtájuk van:</p>
             <p><b> 1. Közelharci</b>: a legközelebbi ellenséges egységet támadják, erősebb védekezéssel rendelkeznek.</p>
             <p><b>2. Távolsági</b>: 600 egységnyi távolságban támadnak. Elenyészően, de magasabb DPS-sel (damage per second) rendelkeznek, viszont gyengébbek is.</p>
             <p><b>3. Ostromminion</b>: minden harmadik hullámban jön egy. Erősebb a többi minionnál és 30%-kal kevesebb sebzést szenvednek a tornyoktól.</p>
             <p><b>4. Nexustörő</b>: csak azon az ösvényen erednek, ahol az ellenséges inhibitort már elpusztították. Minden hullámmal folyamatosan jönnek az nexustörő leváltva, amíg az inhibitor visszaáll (ami négy perc). Az összes többi minionnál több életpontja és sebzése van, sokkal nehezebb is legyőzni egy ilyet.</p>
-            <p class ="lol-közép"></p>
-            <p class ="lol-közép"></p>
-            <p class ="lol-közép"></p>
-            <p class ="lol-közép"></p>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\letöltés2.jfif"> <figcaption>A közelharci minionok</figcaption></div>
@@ -130,7 +132,7 @@
             <p><b>3. Ihlet</b> = kreatív eszközök és a szabályok megkerülése; másodlagos rúna: Elszántság</p>
             <p><b>4. Precizitás</b> = erősebb támadások és folyamatos sebzés; másodlagos rúna: Boszorkányság</p>
             <p><b>5. Uralom</b> = hirtelen sebzés és hozzáférés a célpontokhoz; másodlagos rúna: Precizitás</p></div>
-                    <div class="col-lg-8"><img src="lol képek\runes_2018.jpg"; width="50%"> <figcaption>A rúnák típusai: Precizitás, uralom, boszorkányság, elszántság és ihlet</figcaption></div>
+                    <div class="col-lg-8"><img src="lol képek\runes_2018.jpg", style="max-width: 100%;"> <figcaption>A rúnák típusai: Precizitás, uralom, boszorkányság, elszántság és ihlet</figcaption></div>
                 </div>
             </div>
             <h2 class ="lol-közép">Intelés</h2>
