--- a/lol.html
+++ b/lol.html
@@ -114,10 +114,10 @@
             <p><b>4. Nexustörő</b>: csak azon az ösvényen erednek, ahol az ellenséges inhibitort már elpusztították. Minden hullámmal folyamatosan jönnek az nexustörő leváltva, amíg az inhibitor visszaáll (ami négy perc). Az összes többi minionnál több életpontja és sebzése van, sokkal nehezebb is legyőzni egy ilyet.</p>
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\letöltés2.jfif"> <figcaption>A közelharci minionok</figcaption></div>
-                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\30aef4c7a7d44843b38f283fc90fe36cf50954cb-581x315.png"> <figcaption>A távolsági minionok</figcaption></div>
-                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\images.jfif"> <figcaption>Az ostromminionok</figcaption></div>
-                        <div class="col-lg-3 col-md-6 col-sm-12"><img src="lol képek\Minions_Blue&_Red_Super.jpg"> <figcaption>A Nexustörő minionok</figcaption></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\letöltés2.jfif"> <figcaption>A közelharci minionok</figcaption></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\mage minion.png"> <figcaption>A távolsági minionok</figcaption></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\images.jfif"> <figcaption>Az ostromminionok</figcaption></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\Minions_Blue&_Red_Super.jpg"> <figcaption>A Nexustörő minionok</figcaption></div>
                     </div>
                 </div>
             <h2 class ="lol-közép">Rúnák</h2>
@@ -146,10 +146,10 @@
                     <div class="col-lg-6"><img src="lol képek\Summoner's_Rift_Outer_turret.png">
             <figcaption>A torony felépítése</figcaption></div>
                     <div class="col-lg-6"><p><b>Inhibitor</b>: meggátolja, hogy az ellenfél oldalán Szuperminionok induljanak el. Az inhibitorok nem sebeznek, bár a hősök, csak alapsebzésük 85%-át tudják kiosztani, plusz a bónusz fizikai sebzést, vagy a varázserő 40%-át, attól függ, melyik a magasabb. 4000 életponttal rendelkeznek és az elpusztítás után négy perccel újra üzemkészek. Mikor a bemondó figyelmeztet, hogy az inhibitor hamarosan visszaáll, onnantól kezdve 15 másodperc múlva felépül.</p></div>
-                    <div class="col-lg-6"><img src="lol képek\5d174159002894ce8078e312e5f4a52e.jpg"; width="30%">
+                    <div class="col-lg-6"><img src="lol képek\inhibitor.jpg">
             <figcaption>Az inhibitor</figcaption></div>
                     <div class="col-lg-6"><p><b>Nexus</b>: ez indítja el a minionokat az útjukra, valamint a Nexus tartja fent a kapcsolatot az Idéző és hőse között. Tehát, amikor a Nexus elpusztul, a kapcsolat megszakad és a játék véget ér. 5500 élettel és 25 élet-regenerációval rendelkezik.</p></div>
-                    <div class="col-lg-6"><img src="lol képek\unnamed (1).jpg"; width="30%">
+                    <div class="col-lg-6"><img src="lol képek\.jpg"; width="70%">
             <figcaption>A nexus</figcaption></div>
                     <div class="col-lg-6"><p><b>Nexus Obeliszk</b>: az érkező medence sarkában található torony, ami célozhatatlan. A hatótávján belül (ami maga a medence) 1000 sebzést oszt ki 0,5 másodperc alatt. Ez semmilyen páncéllal, varázsellenállással vagy képességgel nem védhető.</p></div>
                     <div class="col-lg-6"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png">
