--- a/mine.html
+++ b/mine.html
@@ -610,13 +610,93 @@ Legújabb frissítések
     </tr>
 </table>
 
+<h1>Friss hírek</h1>
 
+<h2>1.20 Snapshot 23W07A</h2>
 
+<h3>Sniffer</h3>
 
+<ul>
+    <li>
+        A Sniffer Mob elérhető egy kísérleti funkcióként.
+    </li>
+    <ul>
+        <li>
+            A Sniffer nyerte meg a Mob szavazást 2022-ben
+        </li>
+        <li>
+            Ő az első "Ősi" Mob.
+        </li>
+        <li>
+            Nem lehet kajával kísérteni vagy megszelidíteni.
+        </li>
+        <li>
+            Passzív barátságos Mob.
+        </li>
+        <li>
+            Sniffer-ek simatolnak a levegőben és esetenként magokért ás.
+        </li>
+    </ul>
+</ul>
+<ul>
+    <li>
+        A Fákjavirág mostmár elérhető kisérleti funkcióként.
+    </li>
+    <ul>
+        <li>
+            Fákjavirág magokat le lehet ültetni farmterületre és kivirágzik.
+        </li>
+        <li>
+            Két maggal lehet szaporítani két Sniffert
+        </li>
+        <li>
+            Egy teljesen fenőtt virágot le lehet aratni és úrjaültetni és még festéket is lehet belőle csinálni.
+        </li>
+    </ul>
+</ul>
+<h3>Cseresznye Erdő</h3>
+<ul>
+    <li>
+        Cseresznye erdő Biome-ot hozzáadtuk szép cseresznyefákkal.
+        <!--kép-->
+    </li>
+</ul>
+<h4>Rózsaszín levelek kocka</h4>
+<!--kép-->
+<h4>Cseresznye fa szett</h4>
+<ul>
+    <li>
+        Új fa szett cseresznyefából
+    </li>
+</ul>
+<!--kép-->
 
-Friss hírek
+<h3>Archeológia</h3>
 
-Könyvek
+<h4>Kefe</h4>
+<ul>
+    <li>
+        A kefe egy új készíthető item amivel meg lehet kefélni dolgokat.
+    </li>
+</ul>
+
+<h4>Gyanús homok</h4>
+<ul>
+    <li>
+        Sivatagi templomok és Sivatagi kútakan mostantól gyanús homok található. Ez a törékeny kockát nehéz kiszúrni és könnyen el lehet pusztítani, szóval légy óvatos.
+    </li>
+    <li>
+        Ha gynús homokot kefélünk akkor tárgyakat tudunk belőle kiszedni amiket régen ástak el.
+    </li>
+</ul>
+
+<h4>Cerépdarabok</h4>
+<ul>
+    <li>Cerépdarabokon képek vannak.</li>
+    <li>Nem lehet őket elkészíteni csak Gyanús homok kefélésével lehet őket megszerezni.</li>
+</ul>
+
+Részletesebb leírást és a Snapshot kipróbálását <a href="https://www.minecraft.net/en-us/article/minecraft-snapshot-23w07a" target="_blank">itt</a> teheted meg.
 
 Játéktörténet (elméletben)
 <!--Lejátszási lista a Game Theorists csatornáról-->
