--- a/lol.html
+++ b/lol.html
@@ -129,7 +129,7 @@
             <li><b>Közelharci</b>: a legközelebbi ellenséges egységet támadják, erősebb védekezéssel rendelkeznek.
             <li><b>Távolsági</b>: 600 egységnyi távolságban támadnak. Elenyészően, de magasabb sebzéssel rendelkeznek, viszont gyengébbek is.
             <li><b>Ostromminion</b>: minden harmadik hullámban jön egy. Erősebb a többi minionnál és 30%-kal kevesebb sebzést szenvednek a tornyoktól.
-            <li><b>4. Nexustörő</b>: csak azon az ösvényen erednek, ahol az ellenséges inhibitort már elpusztították. Minden hullámmal folyamatosan jönnek az nexustörő leváltva, amíg az inhibitor visszaáll (ami 5 perc). Az összes többi minionnál több életpontja és sebzése van, sokkal nehezebb is legyőzni egy ilyet.</ol>
+            <li><b>Nexustörő</b>: csak azon az ösvényen erednek, ahol az ellenséges inhibitort már elpusztították. Minden hullámmal folyamatosan jönnek az nexustörő leváltva, amíg az inhibitor visszaáll (ami 5 perc). Az összes többi minionnál több életpontja és sebzése van, sokkal nehezebb is legyőzni egy ilyet.</ol>
                 
             <div class="container">
                     <div class="row">
@@ -174,16 +174,18 @@
                     <div class="col-lg-6"><img src="lol képek\nexus.jpg"; width="70%">
             <figcaption>A nexus</figcaption></div>
                     <div class="col-lg-6"><p><b>Nexus Obeliszk</b>: az érkező medence sarkában található torony, ami célozhatatlan. A hatótávján belül (ami maga a medence) 1000 sebzést oszt ki 0,5 másodperc alatt. Ez semmilyen páncéllal, varázsellenállással vagy képességgel nem védhető.</p></div>
-                    <div class="col-lg-6"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png">
+                    <div class="col-lg-6"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png" class="nyujtott">
             <figcaption>A nexus obeliszk<figcaption></div>
                 </div>
             </div>
             <h2 class ="lol-közép">A játék mint e-sport</h2>
+            <hr>
             <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-6"><p>A 2010-es Los Angeles-i World Cyber Games Grand Finals tartott egy League of Legends bajnokságot. Hétezer dolláros nyereményért küzdöttek a csapatok a Föld minden tájáról, a győztes a Counter Logic Gaming észak-amerikai csapat lett.</p>
+                <div class="col-lg-7 col-md-6"><p>A 2010-es Los Angeles-i World Cyber Games Grand Finals tartott egy League of Legends bajnokságot. Hétezer dolláros nyereményért küzdöttek a csapatok a Föld minden tájáról, a győztes a Counter Logic Gaming észak-amerikai csapat lett.</p>
             <p>Az első évad lezárásaként megrendezett bajnokságnak a Dreamhack svéd rendezvény adott otthont, 2011 júniusában. A százezer dollár összdíjazású bajnokságot az európai Fnatic csapat nyerte. <br>
             A meccsek nézettsége rekordokat döntött, a legmagasabb mért érték több mint kétszázezer néző volt és összesen több mint 1.6 millió nézője volt a bajnokságnak.</p></div>
+            <div class="col-lg-1"></div>
                     <div class="col-lg-4 col-md-6 col-sm-12"><img src="lol képek\lol-group.jpg"; style="width: 100%;"><figcaption>Néhány népszerű LoL e-sport csapat</figcaption></div>
                 </div>
             </div>
