--- a/mine.html
+++ b/mine.html
@@ -658,18 +658,16 @@ Legújabb frissítések
 <ul>
     <li>
         Cseresznye erdő Biome-ot hozzáadtuk szép cseresznyefákkal.
-        <!--kép-->
     </li>
 </ul>
-<h4>Rózsaszín levelek kocka</h4>
-<!--kép-->
+<img src="minenhandwerkképek/cherryblossom.jpg" alt="cherryblossom" title="cseresznyefa">
 <h4>Cseresznye fa szett</h4>
 <ul>
     <li>
         Új fa szett cseresznyefából
     </li>
 </ul>
-<!--kép-->
+<img src="minenhandwerkképek/wood set.PNG" alt="cseresznyefa itemek" title="cseresznyefa szett">
 
 <h3>Archeológia</h3>
 
@@ -679,6 +677,7 @@ Legújabb frissítések
         A kefe egy új készíthető item amivel meg lehet kefélni dolgokat.
     </li>
 </ul>
+<img src="minenhandwerkképek/brush.PNG" alt="kefe" title="kefe">
 
 <h4>Gyanús homok</h4>
 <ul>
@@ -695,6 +694,7 @@ Legújabb frissítések
     <li>Cerépdarabokon képek vannak.</li>
     <li>Nem lehet őket elkészíteni csak Gyanús homok kefélésével lehet őket megszerezni.</li>
 </ul>
+<img src="minenhandwerkképek/pottery.PNG" alt="edény" title="fazekas agyagedények">
 
 Részletesebb leírást és a Snapshot kipróbálását <a href="https://www.minecraft.net/en-us/article/minecraft-snapshot-23w07a" target="_blank">itt</a> teheted meg.
 
