--- a/lol.html
+++ b/lol.html
@@ -133,10 +133,10 @@
                 
             <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\letöltés2.jfif"> <figcaption>A közelharci minionok</figcaption></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\Harcosok.jpg"> <figcaption>A közelharci minionok</figcaption></div>
                         <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\mage minion.png"> <figcaption>A távolsági minionok</figcaption></div>
-                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\images.jfif"> <figcaption>Az ostromminionok</figcaption></div>
-                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\Minions_Blue&_Red_Super.jpg"> <figcaption>A Nexustörő minionok</figcaption></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\cannon.jpg"> <figcaption>Az ostromminionok</figcaption></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\Super_minion.jpg"> <figcaption>A Nexustörő minionok</figcaption></div>
                     </div>
                 </div>
             <h2 class ="lol-közép">Rúnák</h2><hr><br>
