--- a/grand.html
+++ b/grand.html
@@ -14,7 +14,7 @@
         <table>
             <tr>
                 <td>
-                    <a href="index.html" class="topnav">Kezdőlap</a>
+                    <a href="index.html" class="topnav active">Kezdőlap</a>
                 </td>
                 <td>
                     <a href="abus.html" class="topnav">Rólunk</a>
@@ -23,7 +23,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Menü <i class="bi bi-caret-down-fill"></i></button>
                             <div class="dropdown-romane-conti">
-                                <a class="active" href="grand.html">Grand Turismo</a>
+                                <a href="grand.html">Grand Turismo</a>
                                 <a href="lol.html">League of Legends</a>
                                 <a href="mine.html">Minecraft</a>
                             </div>
@@ -330,5 +330,20 @@
         <td>75</td>
     </tr>
 </table>
+<h2>Gran Turismoval kapcsolatos termékek</h2>
+
+<h3>Hivatalos szimulátor csomagok</h3>
+<p>A Polyphony Digital együttműködött a perifériákat gyártó Logitech-el és az autóalkatrészeket gyártó Sparco-val, hogy hivatalos vezetési szimulátorkészleteket tervezzenek a Gran Turismo franchise számára. A legújabb termékmegnevezés a Driving Force GT. Két másik versenykormány kompatibilis a Gran Turismo-val.</p>
+
+<h3>Hivatalos modellautó készletek</h3>
+<p>2009-ben a HPI Racing rádióvezérlésű modellautógyár hivatalos RC-autó-összeköttetést adott ki: a Gran Turismo által tervezett HPI E10 RTR Ford GT LM Race Car Spec II-t (200mm), egy előre beépített, hivatalosan engedélyezett rádióvezérlésű autóskészletet. úgy készült, hogy pontosan úgy nézzen ki, mint a Gran Turismo 4 borítóautója. A jövőbeni kiadások tervei között szerepel további készletek kiadása más Gran Turismo borítóautók lemásolására.</p>
+
+<h3>Gran Turismo kávézó</h3>
+<p>2009-ben megnyílt egy kávézó A Twin Ring Motegi nevű versenypályán.</p>
+
+<h3>Utcanevek</h3>
+<p>A Mount Panorama Circuit Gran Turismo 6-ba való beépítésének elismeréseként az ausztráliai Bathurst városa bemutatta a Gran Turismo Drive nevű új utcát 2013 decemberében. Bathurst polgármestere, Gary Rush azt mondta: „Világhírű autóversenypályánkon egy kört vezetni életet megváltoztató élmény azok számára, akiknek lehetőségük van rá, és a Bathurst Regionális Tanács nagyon izgatottan várja, hogy a Gran Turismo 6 elindítása révén megnyíljon a Mount Panorama élmény."</p>
+<p>Ugyancsak 2013-ban a sorozat készítője, Kazunori Yamauchi utcát neveztek el a tiszteletére a spanyolországi Ronda városában. A Paseo de Kazunori Yamauchi névre keresztelt utca kígyózik a Parador de Ronda körül. Ronda város polgármestere, Maria de la Paz Fernandez Lobato szerint: "Kétségtelen, hogy munkái hatalmas kulturális visszhangot váltanak ki a mai emberek körében. A versenyjátékok műfaját a realizmus új szintjeire terelte, és alkotásai éppolyan művészet, mint technológia Ronda és a Gran Turismo kapcsolata azt is tükrözi, hogy ősi városunk modern, nyüzsgő lakóhely, és nagyon is a 21. század része.”</p>
+
 </body>
 </html>
